tests/should-not-compile/bool-variable-without-initializer.talc
// EXPECTED ERROR: expected "=", got ";" instead
b:bool;
